# fitzel

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build-release.bat
cmake/: Dependencies.cmake
content/models/: tree1.gltf
docs/: fitzel-refactoring.md  lua-scripting.md
engine/: CMakeLists.txt
engine/include/fitzel/: Fitzel.hpp
engine/include/fitzel/asset/: AssetDatabase.hpp  AssetId.hpp  AssetTypes.hpp
engine/include/fitzel/audio/: Audio.hpp
engine/include/fitzel/core/: Input.hpp  Window.hpp
engine/include/fitzel/graphics/: CascadedShadowMap.hpp  CubeRenderTarget.hpp  CubeShadowMap.hpp  EnvironmentIBL.hpp  InstancedMesh.hpp  Material.hpp  Mesh.hpp  RenderTarget.hpp  Shader.hpp  ShadowMap.hpp  Texture.hpp
engine/include/fitzel/physics/: Physics.hpp
engine/include/fitzel/render/: Renderer.hpp
engine/include/fitzel/scene/: Camera.hpp
engine/include/fitzel/ui/: Gui.hpp
engine/include/fitzel/world/: Model.hpp  Terrain.hpp  Voxel.hpp
engine/src/asset/: AssetDatabase.cpp  AssetId.cpp  AssetTypes.cpp
engine/src/audio/: Audio.cpp  miniaudio_impl.cpp
engine/src/core/: Input.cpp  Window.cpp
engine/src/graphics/: CascadedShadowMap.cpp  CubeRenderTarget.cpp  CubeShadowMap.cpp  EnvironmentIBL.cpp  InstancedMesh.cpp  Material.cpp  Mesh.cpp  RenderTarget.cpp  Shader.cpp  ShadowMap.cpp  Texture.cpp  stb_image_impl.cpp  tinyexr_impl.cpp
engine/src/physics/: Physics.cpp
engine/src/render/: Renderer.cpp
engine/src/scene/: Camera.cpp
engine/src/ui/: Gui.cpp
engine/src/world/: Model.cpp  Terrain.cpp  Voxel.cpp
sandbox/: CMakeLists.txt
sandbox/assets/shaders/: basic.frag  basic.vert  billboard.frag  billboard.vert  bird.frag  bird.vert  composite.frag  depth.frag  depth.vert  firefly.frag  firefly.vert  flower.frag  flower.vert  fxaa.frag  grass.frag  grass.vert  lit.frag  lit.vert  rain.frag  rain.vert  sky.frag  sky.vert  skybox.frag  spray.frag  spray.vert  ssao.frag  tree.frag  tree.vert  treedepth.frag  treedepth.vert  water.frag  water.vert
sandbox/scripts/: bullet.lua  can.lua  shooter.lua  spin.lua
sandbox/src/: AssetDrop.cpp  AssetDrop.hpp  CameraPath.cpp  CameraPath.hpp  CarAudio.cpp  CarAudio.hpp  Command.hpp  Component.cpp  Component.hpp  Document.hpp  FolderDialog.cpp  FolderDialog.hpp  FrameRender.hpp  ModelLibrary.cpp  ModelLibrary.hpp  PaintPanel.cpp  PaintPanel.hpp  PresetStore.cpp  PresetStore.hpp  Primitives.cpp  Primitives.hpp  ProjectIO.cpp  ProjectIO.hpp  Property.hpp  PropertyMeta.cpp  PropertyMeta.hpp  RainRenderer.cpp  RainRenderer.hpp  RoadBridge.cpp  RoadBridge.hpp  RoadPanel.cpp  RoadPanel.hpp  RoadSystem.cpp  RoadSystem.hpp  SandboxMath.cpp  SandboxMath.hpp  ScatterTool.cpp  ScatterTool.hpp  SceneTypes.hpp  ScriptHost.hpp  (+19 more)
